dataset1235/2025-2/805158916/users/2488736387/executions/3435325918_95297336.log
== SUBMISSION (2025-09-03 15:29:57)
-- CODE: 
escala = input("escala").upper()
temp_entrada = float(input())

if (escala == "C"):
  temp_saida = (9/5) * temp_entrada + 32
else:
  temp_saida = (5/9) * (temp_entrada - 32)
  
print(round(temp_saida,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
escala160.0
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
escala37.78
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
escala608.0
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
escala608.0
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
escala32.0
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
escala-1.11
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:23:37)
-- CODE: 
escala = input("escala").upper()
temp_entrada = float(input())

if (escala == "C"):
  temp_saida = (9/5) * temp_entrada + 32
else:
  temp_saida = (5/9) * (temp_entrada - 32)
  
  print(round(temp_saida,2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
escala160.0
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
escala37.78
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
escala
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
escala
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
escala
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
escala-1.11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:07:34)
-- CODE: 
escala = input().upper()
temp_entrada = float(input())

if (escala == "C"):
  temp_saida = (9/5) * temp_entrada + 32
else:
  temp_saida = (5/9) * (temp_entrada - 32)
  print(round(temp_saida,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
37.78
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
None
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
None
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
None
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
-1.11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:06:02)
-- CODE: 
escala = input().upper()
temp_entrada = float(input())

if (escala == "C"):
  temp_saida = (9/5) * temp_entrada + 32
else:
  temp_saida = (5/9) * temp_saida - 32

print(round(temp_saida, 2))
-- EXECUTION TIME: 
0.00666667
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    temp_saida = (5/9) * temp_saida - 32
                         ^^^^^^^^^^
NameError: name 'temp_saida' is not defined
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    temp_saida = (5/9) * temp_saida - 32
                         ^^^^^^^^^^
NameError: name 'temp_saida' is not defined
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    temp_saida = (5/9) * temp_saida - 32
                         ^^^^^^^^^^
NameError: name 'temp_saida' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:06:25)
-- CODE: 
escala = input().upper()
temp_entrada = float(input())

if (escala == "C"):
  temp_saida = (9/5) * temp_entrada + 32
else:
  temp_saida = (5/9) * temp_saida - 32
  print(round(temp_saida,2))
-- EXECUTION TIME: 
0.00666667
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    temp_saida = (5/9) * temp_saida - 32
                         ^^^^^^^^^^
NameError: name 'temp_saida' is not defined
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    temp_saida = (5/9) * temp_saida - 32
                         ^^^^^^^^^^
NameError: name 'temp_saida' is not defined
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
None
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
None
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
None
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    temp_saida = (5/9) * temp_saida - 32
                         ^^^^^^^^^^
NameError: name 'temp_saida' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:07:07)
-- CODE: 
escala = input().upper()
temp_entrada = float(input())

if (escala == "C"):
  temp_saida = (9/5) * temp_entrada + 32
else:
  temp_saida = (5/9) * temp_entrada - 32
  print(round(temp_saida,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
145.78
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
23.56
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
None
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
None
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
None
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
-15.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
